--- a/index.html
+++ b/index.html
@@ -1,40 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
+    <title>Frontend Mentor | FAQ Accordion Card</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body class="">
+    <div class="main-card">
+      <div class="image-wrapper">
+        <img
+          class="main-image"
+          src="images/illustration-woman-online-mobile.svg"
+          alt=""
+        />
+        <img class="main-image-bg" src="images/bg-pattern-mobile.svg" alt="" />
+      </div>
+      <!-- desktop image   -->
+      <div class="desktop-image-wrapper">
+        <div class="desktop-main-image-wrapper">
+          <img
+            class="desktop-main-image"
+            src="images/illustration-woman-online-desktop.svg"
+            alt=""
+          />
+        </div>
+        <img
+          class="desktop-box-image"
+          src="images/illustration-box-desktop.svg"
+          alt=""
+        />
+        <img
+          class="desktop-image-bg"
+          src="images/bg-pattern-desktop.svg"
+          alt=""
+        />
+      </div>
+      <div class="questions-box">
+        <h1 class="header">FAQ</h1>
+        <div class="question-wrapper">
+          <p>How many team members can I invite?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="stroke"></div>
+        <div class="question-wrapper">
+          <p>What is the maximum file upload size?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="stroke"></div>
+        <div class="question-wrapper">
+          <p>How do I reset my password?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="stroke"></div>
+        <div class="question-wrapper">
+          <p>Can I cancel my subscription?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="stroke"></div>
+        <div class="question-wrapper">
+          <p>Do you provide additional support?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="stroke"></div>
+        <div class="question-wrapper">
+          <p>How many team members can I invite?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="" />
+        </div>
+        <div class="stroke"></div>
+      </div>
+    </div>
+
+    <!-- You can invite up to 2 additional users on the Free plan. There is no limit on 
   team members for the Premium plan.
 
-  What is the maximum file upload size?
+  
   No more than 2GB. All files in your account must fit your allotted storage space.
 
-  How do I reset my password?
+  
   Click “Forgot password” from the login page or “Change password” from your profile page.
   A reset link will be emailed to you.
 
-  Can I cancel my subscription?
+  
   Yes! Send us a message and we’ll process your request no questions asked.
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  
+  Chat and email support is available 24/7. Phone lines are open during normal business hours. -->
+  </body>
 </html>
